feat: add restful  for car
